import "LoadBalancer.proto";
package topstack_LoadBalancer;

option java_package = "com.transcend.loadbalancer.message";
option java_outer_classname = "DeleteLoadBalancerPolicyMessage";

message DeleteLoadBalancerPolicyRequest {
    required bool typeId = 316;
    required string requestId = 1;
    required string callerAccessKey = 2;
    optional string action = 3 [default = "DeleteLBP"];
    required string loadBalancerName = 4;
    required string policyName = 5;
}

message DeleteLoadBalancerPolicyResult {
    required bool typeId = 317;
    required string requestId = 1;
    required string callerAccessKey = 2;
}
